descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2011-12-XX  Release 7.21.X                                     ---
----------------------------------------------------------------------

* fixed crash in anim_cascade animation tool - Nick Reed
* fixed bug in gif2fb processing non-interlaced images - Sean Morrison
* fix crash in coil when using -S and -l options - Cliff Yapp
* fixed nirt memory leak and scriptfile off-by-one bug - Sean Morrison
* d2-c now handles the imaginary part correctly - Erik Greenwald
* fixed rt* crash when output file cannot be created - Erik Greenwald
* fixed mged bot editor inoperative bug (3392650) - Tom Browder
* fixed mged solids/regions cmds core dump bug (3392558) - Tom Browder
* fixed mged bug setting color via Combination Editor - Nicholas Reed
* fixed crash during rt -c "ae 35 25" view change - Bob Parker
* added -r BoT orientation option on the obj-g importer - Nick Reed
* added ambient occlusion shading method to rt - Lee Butler
* fixed attribute handling bug affecting v4 geometry - Daniel Rossberg
* reid command now reports the highest region ID set - Carl Moore
* batch script shortcuts now set PATH on Windows - Sean Morrison
* fixed g-obj error when exporting facets - Christopher Pitts
* added 'l' list command to archer so 'g' expands args - Bob Parker
* added length parameter documentation for 'coil' command - Cliff Yapp
* improved performance of boolean evaluations - Richard Weiss
* improved boolean evaluation converting to polygons - Richard Weiss
* ported the obj-g geometry importer to Windows - Nicholas Reed
* improved import robustness and parsing of OBJ geometry files
	- Nicholas Reed, Richard Weiss, Mike Tegtmeyer
* added new physics 'simulate' command to mged/archer - Abhijit Nandy


----------------------------------------------------------------------